--- a/css/style.css
+++ b/css/style.css
@@ -15,24 +15,42 @@ main{
   display:flex;
   flex-wrap: wrap;
   overflow-y: auto;
+  padding: 20px;
 }
 /* /MIX */
 
 /* logo layout */
-.logo img{
-  height:40px;
+.logo{
+  display:flex;
+  align-items:center;
+}
+.logo i{
+  color:#1DB954;
+  font-size:46px;
 }
 /* /logo layout */
 .box{
   padding:20px;
   width:calc(100% / 5);
   text-align: center;
+  
+
 }
 .album{
   height:150px;
+  padding:5px;
 }
 .album img{
   height:100%;
   width:100%;
   object-fit: contain;
+}
+.box h1{
+  font-size:20px;
+}
+.box h2{
+  font-size:18px;
+}
+.box p:first-of-type{
+  margin: 10px 0;
 }
